Add API Gateway module with Docker support, Spring Boot configuration, and security setup